--- a/app/src/main/res/layout/sample_dialog1.xml
+++ b/app/src/main/res/layout/sample_dialog1.xml
@@ -5,7 +5,8 @@
   android:id="@+id/coordinator"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  android:background="@color/colorAccent">
+  android:background="@color/sample_bg"
+  android:fitsSystemWindows="true">
 
   <androidx.appcompat.widget.AppCompatImageView
     android:layout_width="wrap_content"
