--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,4 +5,26 @@
     <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
     <item name="colorAccent">@color/colorAccent</item>
   </style>
+
+  <style name="Widget.AppSample.Dialog" parent="AppTheme" />
+
+  <style name="Widget.AppSample.Dialog.Full">
+    <item name="android:windowFullscreen">false</item>
+    <item name="android:windowIsFloating">false</item>
+
+    <item name="android:windowBackground">@android:color/transparent</item>
+
+    <!--<item name="colorPrimaryDark">@null</item>-->
+    <!--<item name="android:navigationBarColor">@android:color/transparent</item>-->
+
+    <item name="android:windowTranslucentStatus">true</item>
+    <item name="android:windowActionBarOverlay">true</item>
+    <item name="android:windowContentOverlay">@null</item>
+
+    <!--<item name="android:windowTranslucentNavigation">@null</item>-->
+    <!--<item name="android:windowDrawsSystemBarBackgrounds">true</item>-->
+
+    <!--<item name="android:windowTranslucentStatus">false</item>-->
+    <!--<item name="android:statusBarColor">@android:color/transparent</item>-->
+  </style>
 </resources>
