--- a/app/src/main/res/layout/main_act.xml
+++ b/app/src/main/res/layout/main_act.xml
@@ -6,6 +6,7 @@
   android:fitsSystemWindows="true">
 
   <com.google.android.material.appbar.AppBarLayout
+    style="ThemeOverlay.AppCompat.Light"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
