--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,14 +17,18 @@
     <!--<item name="colorPrimaryDark">@null</item>-->
     <!--<item name="android:navigationBarColor">@android:color/transparent</item>-->
 
-    <item name="android:windowTranslucentStatus">true</item>
-    <item name="android:windowActionBarOverlay">true</item>
-    <item name="android:windowContentOverlay">@null</item>
+    <!--<item name="android:windowTranslucentStatus">true</item>-->
 
+    <!--<item name="android:windowActionBarOverlay">true</item>-->
+    <!--<item name="android:windowContentOverlay">@null</item>-->
     <!--<item name="android:windowTranslucentNavigation">@null</item>-->
     <!--<item name="android:windowDrawsSystemBarBackgrounds">true</item>-->
-
     <!--<item name="android:windowTranslucentStatus">false</item>-->
     <!--<item name="android:statusBarColor">@android:color/transparent</item>-->
+
+    <!--<item name="android:windowTranslucentStatus">true</item>-->
+
+    <item name="android:windowTranslucentStatus">true</item>
+    <item name="android:statusBarColor">@android:color/transparent</item>
   </style>
 </resources>
