--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,6 +4,9 @@
     <item name="colorPrimary">@color/colorPrimary</item>
     <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
     <item name="colorAccent">@color/colorAccent</item>
+
+<!--    <item name="android:windowDrawsSystemBarBackgrounds">false</item>-->
+<!--    <item name="android:windowTranslucentStatus">true</item>-->
   </style>
 
   <style name="Widget.AppSample.Dialog" parent="AppTheme" />
