--- a/app/src/main/res/layout/app_act.xml
+++ b/app/src/main/res/layout/app_act.xml
@@ -20,4 +20,11 @@
     android:layout_height="wrap_content"
     android:text="hide navigation"
     tools:ignore="HardcodedText" />
+
+  <Button
+    android:id="@+id/navigation2"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="hide navigation2"
+    tools:ignore="HardcodedText" />
 </LinearLayout>
