--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,8 +5,8 @@
     <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
     <item name="colorAccent">@color/colorAccent</item>
 
-<!--    <item name="android:windowDrawsSystemBarBackgrounds">false</item>-->
-<!--    <item name="android:windowTranslucentStatus">true</item>-->
+    <!--    <item name="android:windowDrawsSystemBarBackgrounds">false</item>-->
+    <!--    <item name="android:windowTranslucentStatus">true</item>-->
   </style>
 
   <style name="Widget.AppSample.Dialog" parent="AppTheme" />
@@ -33,5 +33,11 @@
 
     <item name="android:windowTranslucentStatus">true</item>
     <item name="android:statusBarColor">@android:color/transparent</item>
+  </style>
+
+  <style name="AppTheme.Hoge" parent="Theme.MaterialComponents.NoActionBar">
+    <item name="android:windowTranslucentNavigation">true</item>
+    <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+    <item name="android:navigationBarColor">@android:color/transparent</item>
   </style>
 </resources>
