--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,9 +1,11 @@
 <resources>
   <!-- Base application theme. -->
-  <style name="AppTheme" parent="Theme.MaterialComponents.NoActionBar">
+  <style name="AppTheme" parent="Theme.MaterialComponents.Light">
     <item name="colorPrimary">@color/colorPrimary</item>
     <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
     <item name="colorAccent">@color/colorAccent</item>
+
+    <item name="colorControlActivated">?colorPrimary</item>
 
     <!--    <item name="android:windowDrawsSystemBarBackgrounds">false</item>-->
     <!--    <item name="android:windowTranslucentStatus">true</item>-->
@@ -35,9 +37,19 @@
     <item name="android:statusBarColor">@android:color/transparent</item>
   </style>
 
-  <style name="AppTheme.Hoge" parent="Theme.MaterialComponents.NoActionBar">
-    <item name="android:windowTranslucentNavigation">true</item>
-    <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+  <style name="AppTheme.NoActionBar">
+    <item name="windowActionBar">false</item>
+    <item name="windowNoTitle">true</item>
+  </style>
+
+  <style name="AppTheme.Hoge" parent="AppTheme.NoActionBar">
+    <!--    <item name="android:windowTranslucentNavigation">true</item>-->
+    <!--    <item name="android:windowLightNavigationBar">true</item>-->
+
+    <item name="android:windowLightNavigationBar">true</item>
     <item name="android:navigationBarColor">@android:color/transparent</item>
+
+<!--    <item name="android:windowDrawsSystemBarBackgrounds">true</item>-->
+    <!--    <item name="android:navigationBarColor">@android:color/white</item>-->
   </style>
 </resources>
