--- a/app/src/main/res/layout/hide_navigation_act.xml
+++ b/app/src/main/res/layout/hide_navigation_act.xml
@@ -4,7 +4,12 @@
   android:id="@+id/top"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  android:fitsSystemWindows="true">
+  android:fitsSystemWindows="false">
+
+  <androidx.appcompat.widget.Toolbar
+    android:id="@+id/toolbar"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content" />
 
   <Button
     android:layout_width="match_parent"
