--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,12 +42,12 @@
     <item name="windowNoTitle">true</item>
   </style>
 
-  <style name="AppTheme.Hoge" parent="AppTheme.NoActionBar">
+  <style name="AppTheme.LightNavigation" parent="AppTheme.NoActionBar">
     <!--    <item name="android:windowTranslucentNavigation">true</item>-->
     <!--    <item name="android:windowLightNavigationBar">true</item>-->
 
     <item name="android:windowLightNavigationBar">true</item>
-    <item name="android:navigationBarColor">@android:color/transparent</item>
+    <item name="android:navigationBarColor">@android:color/white</item>
 
 <!--    <item name="android:windowDrawsSystemBarBackgrounds">true</item>-->
     <!--    <item name="android:navigationBarColor">@android:color/white</item>-->
