--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -47,7 +47,9 @@
     <item name="android:navigationBarColor">@android:color/white</item>
   </style>
 
-  <style name="AppTheme.Dialog.LightNavigation" parent="Theme.MaterialComponents.Light.BottomSheetDialog">
+  <style name="AppTheme.Dialog.LightNavigation" parent="Theme.Design.Light.BottomSheetDialog">
+    <item name="android:colorBackground">@android:color/transparent</item>
+
     <item name="android:windowIsFloating">false</item>
     <item name="android:windowLightNavigationBar">false</item>
     <item name="android:navigationBarColor">@android:color/black</item>
